@@ -2,7 +2,7 @@ griffith (0.9-1) unstable; urgency=low
 
   * New upstream release
 
- -- Piotr Ozarowski <ozarow@gmail.com>  Wed, 24 Jan 2007 12:35:10 +0100
+ -- Piotr Ozarowski <ozarow@gmail.com>  Fri, 26 Jan 2007 19:49:36 +0100
 
 griffith (0.9~rc3-1) unstable; urgency=low
 
