@@ -6,6 +6,9 @@ Griffith ChangeLog
 
 ---- 0.9 ---
 
+2007-01-26  Piotr Ożarowski
+	* WP movie plugin updated
+
 2007-01-26 Jessica K. Parth
 	* Fix AniDB Problems in Windows ( file-open problem in movie.py )
 
